2005-08-25  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au.

	* lib/network.c :
	* lib/network.h :

	  - Added tbe_net_add_ep() which allows endpoints of intervals to be
	    defined. The new function tbe_net_propagate2() goes through all the
	    intervals in the network whose endpoints are defined and works out
	    the relations between them.

	  - Renamed all previous propagate functions and structures to
	    propagate1 to avoid confusion with the new propagate functions and
	    structures.

	* test/test.c :

	  - Added a test for tbe_net_add_ep().

2005-08-23  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au.

	* lib/rel.c :
	* lib/rel.h :

	  - Cleaned up the interface for tbe_rel_calc(). We now pass two masks
	    instead of one. More parameters, more memory, but clearer.

	  - Include stdio.h. Needed by references to the FILE structure.

	* test/test.c :

	  - Now uses new tbe_rel_calc() interface.

	* lib/rlist.h :

	  - Include stdio.h. Needed by references to the FILE structure.

2005-08-19  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/network.c :

	  - Clarified algorithms in the comments.

	  - Added a check to prevent propagating relations that is not
	    more specific than what is already known.

2005-08-16  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/iqueue.c :
	* lib/list.c :
	* lib/list.h :
	* lib/network.c :
	* lib/rlist.c :

	  - Added const qualifier in the parameters of *_cmp() functions.

	* lib/Makefile.in :
	* lib/network.c :
	* lib/network.h :
	* lib/rlist.c :
	* lib/rlist.h :

	  - Moved rlist implementation out of network.c and into their own
	    files.

	  - Some general cleanup.

2005-08-15  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* VERSION :
	* configure.ac :

	  - Version 0.3.0

	* lib/rel.c :
	* lib/rel.h :
	* test/test.c :

	  - tbe_rel_calc() now takes a bitmask to indicate which endpoins are
	    defined. This change allows time == 0 to be used as a time value.
